[package]
name = "password-generator"
version = "0.1.0"
license-file = "LICENSE"
repository = "https://github.com/sdanialraza/password-generator"
rust-version = "1.76.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
copypasta = "0.10.1"
eframe = { version = "0.26.2", features = ["persistence"] }
rand = "0.8.5"
serde_json = "1.0.114"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
